--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,11 @@
         android:padding="10dp"
         android:layout_margin="20dp"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Contacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Contacts"/>
+
 </LinearLayout>
